Official Portfolio/src/Components/ExperienceCard.css
.xp-card {
    display: flex;
    padding: 2rem;
    margin: 1rem;
    text-align: left;
}

.xp-card .xp-image {
    max-width: 15%;
    border-radius: 20%;
}

.xp-card .xp-details {
    display: flex;
    flex-direction: column;
    padding-left: 2rem;
}

.xp-card .xp-company {
    text-decoration: none;
    color: black;
    font-size: 2rem;
    font-weight: bold;
}

.xp-card .xp-company:hover {
    text-decoration: underline;
    color: grey;
    font-size: 2rem;
    font-weight: bold;
}

.xp-card .xp-date {
    color: gray;
    padding-top: 1.6rem;
    font-size: 1.5rem;
}

